--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-hola
+<head> 
+  <title> Jorge Viloria</title>
+</head>
+<body>
+Estudiante del 7mo semestre de Ingenieria Informatica en la Universidad Catolica Andres Bello
+</body>
